kube-infra/kustomize/keptn/keptn/envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-development-aws
  name: keptn-ingress
  namespace: keptn
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-gateway-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
    host: keptn.bradmccoy.io
  tls:
  - hosts:
    - keptn.bradmccoy.io
    secretName: keptn-tls-cert
